tests/machine/x/go/group_items_iteration.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_items_iteration.go:17:15: undefined: DataVar
../../../tests/machine/x/go/group_items_iteration.go:20:5: undefined: DataVar
../../../tests/machine/x/go/group_items_iteration.go:23:5: undefined: DataVar
../../../tests/machine/x/go/group_items_iteration.go:52:23: x.Val undefined (type any has no field or method Val)
../../../tests/machine/x/go/group_items_iteration.go:54:21: undefined: v

1: //go:build ignore
